# chintu

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: README.md
chintuFrontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
chintuFrontend/app/: globals.css  layout.tsx  page.tsx
chintuFrontend/components/: ChatArea.tsx  EntityCards.tsx  ForceGraph.tsx  InputBar.tsx  MessageRow.tsx  Sidebar.tsx  Timeline.tsx  VizArtifact.tsx
chintuFrontend/lib/: chintuAdapter.ts
chintuFrontend/types/: index.ts
data/: README.md
data/chintu/: belongs_to_edges.csv  entities.csv  influences_edges.csv  topics.csv
data/gdelt_raw/: 20260301000000.export.CSV  20260301120000.export.CSV  20260302000000.export.CSV  20260302120000.export.CSV  20260303000000.export.CSV  20260303120000.export.CSV  20260304000000.export.CSV  20260304120000.export.CSV  20260305000000.export.CSV  20260305120000.export.CSV  20260306000000.export.CSV  20260306120000.export.CSV  20260307000000.export.CSV  20260307120000.export.CSV  (+47 more)
docs/: CHINTU_SCHEMA.md
experiments/: README.md
gsql/: chintu_causal_explosion_viz.gsql  chintu_event_text_search.gsql  chintu_narrative_trace.gsql
newsletter/: .env.example  app.js  fetchNewsletterContent.js  package-lock.json  package.json  subscribed.html
scripts/: _repo.py  batch_loader.py  data_download.py  extract_csv.py  install_chintu_query.py  load_all_gsql_batches.py  load_to_tigergraph.py  load_via_gsql.py  parse.py
tests/: test_event_resolve.py  test_tigergraph_rest.py  test_viz_payload.py
(+37 files in other folders)
