[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chintu"
version = "0.1.0"
description = "CHINTU: GDELT → TigerGraph narrative graph pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "python-dotenv>=1.0",
  "requests>=2.28",
]

[project.optional-dependencies]
tigergraph = ["pyTigerGraph>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
